#ifndef _LEAF_H_
#define _LEAF_H_

#include "Node.h"

class Leaf : public Node {
    public: 
        Leaf();
        virtual ~Leaf();
};

#endif // _LEAF_H_