
#ifndef _NODE_H_
#define _NODE_H_

class Node {

    public:
        Node();

};

#endif // _NODE_H_